<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".NotaNueva">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:fontFamily="cursive"
                android:text="@string/notepadplus"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/Titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/titulo_de_la_nota"
                android:inputType="textPersonName"
                android:textColor="#F1EDED"
                android:textColorHint="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="vertical">

            </LinearLayout>

            <EditText
                android:id="@+id/Contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/escribe_aqu_tu_nota"
                android:inputType="textPersonName"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:textColor="#F1EDED"
                android:textColorHint="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="vertical"></LinearLayout>

            <EditText
                android:id="@+id/Fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/introduce_una_fecha"
                android:inputType="date"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="91dp"
                android:background="@drawable/btredondo"
                android:onClick="GuardarNota"
                android:text="@string/guardar_nota"
                android:textColor="#0F0909" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>