<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".Grabadora">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:fontFamily="cursive"
                android:text="@string/notepadplus"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/iconos"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/estado"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btredondo"
                android:onClick="Grabar"
                android:text="@string/grabar"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btredondo"
                android:onClick="Detener"
                android:text="@string/detener_grabacion"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btredondo"
                android:onClick="Reproducir"
                android:text="@string/reproducir_grabacion"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="23dp"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>