<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:fontFamily="cursive"
                android:text="@string/notepadplus"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selecciona_la_herramienta_que_quieres_usar"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="541dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/btredondo"
                    android:gravity="center"
                    android:onClick="Calendario"
                    android:text="@string/calendario"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                </LinearLayout>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:background="@drawable/btredondo"
                    android:onClick="Calculadora"
                    android:text="@string/calculadora"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                </LinearLayout>

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:background="@drawable/btredondo"
                    android:onClick="Notas"
                    android:text="@string/notas"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                </LinearLayout>

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:background="@drawable/btredondo"
                    android:onClick="Grabadora"
                    android:text="@string/grabadora"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:orientation="vertical"></LinearLayout>

                <Button
                    android:id="@+id/button13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="CREDITOS"
                    android:background="@drawable/btredondo"
                    android:onClick="Creditos"
                    android:textColor="#000000"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>