<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".Notas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LinearNotas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/notepadplus"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btredondo"
                android:onClick="NotaNueva"
                android:text="@string/a_adir_nota" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:id="@+id/lista2"
                android:layout_width="match_parent"
                android:layout_height="473dp"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/lista"
                    style="@android:style/Widget.Material.ListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:cacheColorHint="#FFFFFF"
                    android:foregroundTint="#FFFFFF"
                    android:style="@android:style/Widget.Material.ListView" />
            </LinearLayout>

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btredondo"
                android:onClick="EliminarNota"
                android:text="@string/eliminar_nota" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>